The following list contains all changes to pgAdmin3, as present in cvs. 
<ul>
<li>A version number denotes the release version, which contains the patch or feature mentioned.
<li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
<li>Unmarked fixes are experimental and are contained in snapshots only.
</ul>
<br>
<ul>
    <li>2004-01-20 AP        owner, name, comment refactoring in dlgProperty
    <li>2004-01-20 AP        support of function parameters
    <li>2004-01-20 AP        tablespace changes
    <li>2004-01-19 AP        fix dependency display for tablespaces and users
    <li>2004-01-18 AP        Update ServerStatus to pg_logfiles_ls and pg_file_read/pg_file_length
    <li>2004-01-18 AP        Allow change of some function attributes
    <li>2004-01-12 AP        Fix check constraint in table reengineering
    <li>2004-01-11 AP        Fix combobox size/position issue on gtk
    <li>2004-01-11 AP        Fix button height issue with modern gtk themes
    <li>2004-06-30 AP        Tablespace ACLs
    <li>2004-06-23 DP        Split Windows installer into a merge module and installer to allow inclusion in other packages.
    <li>2004-06-23 DP        Allow cancelling of queries and termination of backends from server status dialogue for 7.5+.
    <li>2004-06-20 AP        backup database using pg_dump
    <li>2004-06-19 AP        Tablespace dependencies
    <li>2004-06-19 AP        combobox guessing cleanups
    <li>2004-06-18 AP        7.5 Tablespace
    <li>2004-06-18 AP        Count menu instead of refresh to count rows in a table
    <li>2004-06-18 AP        CLUSTERed index support for PostgreSQL 7.4 - ALTER TABLE foo CLUSTER ON blah;
    <li>2004-06-17 AP        copy rows to clipboard from Query Tool and View Data Tool
    <li>2004-06-16 AP        allow omitting server disconnect when switching "Show System Objects"
    <li>2004-06-16 AP        guess combobox selection while typing