@@ -16,6 +16,8 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
+    <li>2004-01-21 AP        Update ServerStatus to pg_logdir_ls
+    <li>2004-01-21 AP        catch SIGPIPE
     <li>2004-01-20 AP        owner, name, comment refactoring in dlgProperty
     <li>2004-01-20 AP        support of function parameters
     <li>2004-01-20 AP        tablespace changes
